Bug 300297. Be careful about choosing the top-level window when making a transparent window. r+sr=me,a=shaver/cbeard,patch by Dainis.Jonitis